# Claude-Prism

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_PRISM_HANDOFF.md  Dockerfile  HUMAN_REVIEW_TODO.md  README.md  build_app.sh  build_standalone.sh  plotter_app_execution.py  plotter_app_wiki.py  plotter_barplot_app.py  plotter_export.py  plotter_functions.py  plotter_plotly_theme.py  plotter_registry.py  plotter_results.py  plotter_server.py  plotter_spec_area.py  plotter_spec_bar.py  plotter_spec_grouped_bar.py  plotter_spec_line.py  plotter_spec_scatter.py  plotter_tabs.py  plotter_validators.py  plotter_web_server.py  plotter_webview.py  plotter_widgets.py  prism_barplot_app.py  prism_validators.py  pyproject.toml  pytest.ini  requirements.txt  run_all.py  setup.sh
.claude/: settings.json
.claude/hooks/: update_docs.py
.github/workflows/: build-dmg.yml  ci.yml
RefractionApp/: project.yml
RefractionRenderer/: Package.swift
assets/: AppIcon.icns
debug.refract/: project.json
debug.refract/data/: 0C610A59-5E61-42D3-93E5-DC58B06FEF20.json  129079D3-18E1-4BC7-AAAA-11B9F79A3859.json  1498DDF0-1F2F-495A-8B5A-B64684A6F03A.json  14FA779B-228A-45F2-80A8-C386C9C19D0E.json  (+25 more)
phase2/: PHASE2_SUMMARY.md
plotter_web/: package-lock.json
plotter_web/src/: App.tsx
tests/: conftest.py  plotter_test_harness.py  test_analysis.py  test_api.py  test_modular.py  test_phase2_infra.py  test_phase3_plotly.py  test_phase6_qa.py  test_render_contract.py  test_stats.py  test_stats_exhaustive.py  test_stats_verification.py  test_validators.py  visual_test.py
(+92 files in other folders)
