[project]
name = "refraction"
version = "0.1.0"
description = "GraphPad Prism-style scientific plotting application"
requires-python = ">=3.10"

[tool.pyright]
include = ["refraction/core"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnnecessaryIsInstance = false
reportPrivateUsage = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportUntypedBaseClass = false
reportUnusedImport = false
reportUnusedVariable = false
reportConstantRedefinition = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportMissingTypeArgument = false
reportCallInDefaultInitializer = false
reportImplicitOverride = false
reportUnknownLambdaType = false
reportAttributeAccessIssue = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
